# smart_traffic_signal_ai

./: README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  traffic_signal_ai_demo.ipynb
smart-traffic-signal-ai/: pyproject.toml  traffic_signal_ai_demo.ipynb
smart-traffic-signal-ai/tasks/task_1/: task.yaml
smart-traffic-signal-ai/tasks/task_2/: task.yaml
tasks/task_1/: grader.py  task.yaml
tasks/task_1/tasks/task_1/: grader.py
tasks/task_1/tasks/task_1/tasks/: openenv.yaml
tasks/task_1/tasks/task_1/tasks/task_2/tasks/task_2/: grader.py
tasks/task_2/: grader.py  task.yaml
tasks/task_3/: grader.py  task.yaml
